src/test/ui/parser/unbalanced-doublequote.stderr
error[E0765]: unterminated double quote string
  --> $DIR/unbalanced-doublequote.rs:5:5
   |
LL | /     "
LL | | }
   | |__^

error: this file contains an unclosed delimiter
  --> $DIR/unbalanced-doublequote.rs:6:3
   |
LL | fn main() {
   |           - unclosed delimiter
LL |     "
LL | }
   |   ^

error[E0308]: mismatched types
  --> $DIR/unbalanced-doublequote.rs:5:5
   |
LL |   fn main() {
   |             - expected `()` because of default return type
LL | /     "
LL | | }
   | |__^ expected `()`, found `&str`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0308, E0765.
For more information about an error, try `rustc --explain E0308`.
