src/test/ui/parser/unbalanced-doublequote.rs
// compile-flags: -Z parse-only


// error-pattern: unterminated double quote string


fn main() {
    "
}
